--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
+    "datatables.net": "^1.10.25",
+    "datatables.net-dt": "^1.10.25",
     "eslint": "^7.10.0",
     "express": "4.17.1",
     "googleapis": "61.0.0",
@@ -47,6 +49,7 @@
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
     "rxjs-compat": "6.6.3",
+    "sweetalert2": "^11.0.16",
     "web-animations-js": "2.3.2",
     "zone.js": "0.11.1"
   },
@@ -57,9 +60,10 @@
     "@angular/language-service": "10.1.4",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.0",
+    "@types/datatables.net": "^1.10.19",
     "@types/googlemaps": "3.39.14",
     "@types/jasmine": "3.5.14",
-    "@types/jquery": "3.5.2",
+    "@types/jquery": "^3.5.2",
     "@types/node": "14.11.5",
     "codelyzer": "6.0.1",
     "jasmine-core": "3.6.0",
